--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body, html {
   background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h16v2h-6v6h6v8H8v-6H2v6H0V0zm4 4h2v2H4V4zm8 8h2v2h-2v-2zm-8 0h2v2H4v-2zm8-8h2v2h-2V4z' fill='%23000000' fill-opacity='0.41' fill-rule='evenodd'/%3E%3C/svg%3E");
   box-shadow: inset 0 -100px 300px -20px rgba(0, 0, 0, 0.5);
 }
+.logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.logo img {
+  height: 90px;
+}
 .container {
   background: #fff;
   border-radius: 4px;
